fixed spacing again

--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -59,10 +59,11 @@ img {
     padding: 2%;
 }
 .filter-spacer {
-    padding: 4%;
+    padding: 3%;
 }
 .content {
-    padding: 6% 2% 0%;
+    text-align: center;
+    padding: 3% 2% 0%;
     width: ;
     height: 100%;
 }
